cluster/resources/ingress/backstage-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-backend
  namespace: backstage
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: backstage-api.localdev.me
      http:
        paths:
          # Redireciona root para /api para facilitar acesso às APIs
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  name: http
